Updated gradle build file to use Java version 22. Added --enable-preview flags.